[package]
name = "dockerui"
version = "0.0.1"
authors = ["Donovan Dall"]
description = "blazing fast terminal-ui for docker"
edition = "2018"
exclude = [".github/*", ".vscode/*"]
homepage = "https://github.com/AwesomeIbex/dockerui"
repository = "https://github.com/AwesomeIbex/dockerui"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = [
    "docker",
    "gui",
    "cli",
    "terminal",
    "ui",
]

[dependencies]
clap = { version = "2.33", default-features = false }
tui = { version = "0.12", default-features = false, features = ['termion', 'serde'] }
termion = "1.5.5"
itertools = "0.9.0"
log = "0.4"
dirs-next = "2.0"
chrono = "0.4"
serde = "1.0"
anyhow = "1.0.33"
bollard = "0.8"
tokio = { version = "0.2", features = ["macros"] }
scopeguard = "1.1"
backtrace = "0.3"
rayon-core = "1.9"
rand = "0.7.3"
ron = "0.6.2"

[target.'cfg(target_os = "linux")'.dependencies]
which = "4.0.2"

[target.'cfg(not(windows))'.dependencies]
pprof = { version = "0.3", features = ["flamegraph"], optional = true }

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
lto = true
opt-level = 'z'  # Optimize for size.
codegen-units = 1
